backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.32.0 (765fde254)
  labels:
    io.kompose.service: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.32.0 (765fde254)
      labels:
        io.kompose.network/kontejnerizacija-projectnetwork: "true"
        io.kompose.service: backend
    spec:
      containers:
        - image: localhost:5000/kontejnerizacija-backend:latest
          name: backend
          ports:
            - containerPort: 3000
              hostPort: 3000
              protocol: TCP
          volumeMounts:
            - mountPath: /usr/src/app/backend/images
              name: app-images-volume
      restartPolicy: Always
      volumes:
        - name: app-images-volume
          persistentVolumeClaim:
            claimName: app-images-volume
