mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.32.0 (765fde254)
  labels:
    io.kompose.service: mongodb
  name: mongodb
spec:
  replicas: 3
  selector:
    matchLabels:
      io.kompose.service: mongodb
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.32.0 (765fde254)
      labels:
        io.kompose.network/kontejnerizacija-projectnetwork: "true"
        io.kompose.service: mongodb
    spec:
      containers:
        - image: localhost:5000/kontejnerizacija-mongodb:latest
          name: mongodb
          ports:
            - containerPort: 27017
              hostPort: 27017
              protocol: TCP
          volumeMounts:
            - mountPath: /data/db
              name: app-images-volume
      restartPolicy: Always
      volumes:
        - name: app-images-volume
          persistentVolumeClaim:
            claimName: app-images-volume
