ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - essa-vm-05.lrk.si
    secretName: essa-vm-05-lrk-si-tls
  rules:
  - host: essa-vm-05.lrk.si
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: proxy
            port:
              number: 8080
